Fixed missing names from location master on firefox
Workitems:
#23410 Location master -  Column names are missing from the location master
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C26892

--- a/ShipTech10/app/app-masters/assets/css/custom.css
+++ b/ShipTech10/app/app-masters/assets/css/custom.css
@@ -696,14 +696,14 @@ span.variance {
 /*Multi header ui-grid*/
 
 .ui-grid-header-cell.ui-grid-clearfix.ui-grid-category.label_false_visible {
-    display: inline-table;
+  /*  display: inline-table;*/
     height: 100%;
     text-align: center;
     width: 30%;
 }
 
 .ui-grid-header-cell.ui-grid-clearfix.ui-grid-category.label_false_visible:before {
-    display: none;
+   /* display: none;*/
 }
 
 .ui-grid-header-cell.ui-grid-clearfix.ui-grid-category .parent-header-category {
